@@ -1,4 +1,6 @@
 /*
+ * $Id: volume.c,v 1.5 2001-02-28 16:53:24 rufustfirefly Exp $
+ *
  * Copyright (c) 1990,1993 Regents of The University of Michigan.
  * All Rights Reserved.  See COPYRIGHT.
  */
@@ -327,6 +329,11 @@ static void volset(struct vol_option *options, char *volname, int vlen,
 	options[VOLOPT_FLAGS].i_value |= AFPVOL_USEDOTS;
       else if (strcasecmp(p, "limitsize") == 0)
 	options[VOLOPT_FLAGS].i_value |= AFPVOL_LIMITSIZE;
+      /* support for either "dropbox" or "dropkludge" */
+      else if (strcasecmp(p, "dropbox") == 0)
+	options[VOLOPT_FLAGS].i_value |= AFPVOL_DROPBOX;
+      else if (strcasecmp(p, "dropkludge") == 0)
+	options[VOLOPT_FLAGS].i_value |= AFPVOL_DROPBOX;
 
       p = strtok(NULL, ",");
     }
