@@ -1,4 +1,12 @@
-($Id: ChangeLog,v 1.12 2001-02-27 21:32:26 rufustfirefly Exp $)
+($Id: ChangeLog,v 1.13 2001-02-28 16:53:23 rufustfirefly Exp $)
+
+2001-02-28  jeff b  <jeff@univrel.pr.uconn.edu>  
+
+	* etc/afpd/directory.c, etc/afpd/file.c, etc/afpd/filedir.c,
+	etc/afpd/unix.c, etc/afpd/unix.h, etc/afpd/volume.h,
+	etc/afpd/volume.c, man/man5/AppleVolumes.default.5.tmpl: added
+	"dropbox" to available option if DROPKLUDGE is used during
+	compile 
 
 2001-02-27  jeff b  <jeff@univrel.pr.uconn.edu>  
 
